changed index.html and stylesheet.css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>This is to check the working of git</title>
 </head>
 <body>
-	<head>This is my AAP</head>
+	<h1>This is my AAP</h1>
 	<p>Please support my work on this website !!</p>
 </body>
 </html>
